jtr/webSite/css/main.css
#programInfo {
    font-size: 16px;
}

#cgData {
/*height: 400px;*/
width: 1200px;
overflow: hidden;
float:left;
}

#stationLabelDiv {
width: 140px;
float:left;
}

.cgStationLine {
    width: 140px;
    height: 50px;
    background-color: lightcyan;
    font-size: 16px;
    margin-bottom: 0px;
    border:solid;
    border-width: 1px;
    text-align: center;
}

.timeLine {
    height: 50px;
    width: 3000px;
    background-color: lightblue;

    margin-bottom: 0px;
    border:solid;
    border-width: 1px;
}

.thirtyMinuteTime {
    width: 240px;
    height: 48px;
    /*border:solid;
    border-width: 1px;*/
    padding:5px 10px;
    font-size: 16px;
    display:inline-block;
    text-align: center;

    border:solid;
    /*border-right: 1px;*/
    border-right-width: 1px;
    border-left-width: 0px;
    border-top-width: 0px;
    border-bottom-width:0px;
    border-right-color: black;
    border-left-color: black;
}


.cgLine {
    height: 50px;
    width: 3000px;
    background-color: coral;
}


.thirtyMinuteButton {
display:inline-block;
width: 240px;
padding:5px 10px;
font-size: 16px;
height: 48px;
/*border-width: 1px;*/
    background-color: lightcyan;
}

.sixtyMinuteButton {
display:inline-block;
width: 480px;
padding:5px 10px;
font-size: 16px;
height: 48px;
    background-color: lightcyan;
}

.variableButton {
display:inline-block;
padding:5px 10px;
font-size: 16px;
height: 48px;
    background-color: lightcyan;
}


#segmentRecordingsCheckBox {
    margin: 10px 0px 0px 0px;
}

.clearDisplay {
    display: none;
}

.inlineDisplay {
    display: inline;
}

.footerAlignLeft {
  float: left;
  width:20%;
  text-align:left;
}

.footerAlignCenter {
  float: left;
  width:60%;
  text-align:center;
}

.footerAlignRight {
  float: left;
  width:20%;
  text-align:right;
}

#trickModeKeys {
    width: 50%;
    margin: 0 auto;
}

.alignleft {
	float: left;
}

.alignright {
	float: right;
}

th.play, th.delete, th.repeat, th.showInfo {
  width: 40px;
}

th.stream {
    width: 20px;
}

th.download {
    width: 20px;
}

th.recorded {
  width: 100px;
}

.recorded-shows-icon {
  padding-top: 2px;
  padding-right: 4px;
  padding-bottom: 2px;
  padding-left: 4px;
}

.btn-secondary 
{
}

.tv-words
{
}

/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;

}

.container {
}


/* Custom page footer */
.footer {
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 1400px;
  }
}

@media (min-width: 1200px) {
  .container {
    width: 1500px;
  }
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Supporting homePage content */
#homePage {
  margin: 40px 0;
}
#homePage p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  #homePage,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
}

/*span.glyphicon */
/* possibly use for play, pause icons */
.whiteIcon {
    font-size: 5em;
    color: white;
}

#userMessage {
  color: white;
  position: fixed;
  top: 100px;
  left: 10%
}

#channel {
  color: white;
  position: fixed;
  top: 50px;
  right: 10%
}

.controlIcon {
  position: fixed;
  z-index: 2;
}

.meterTick
{
  height: 10px;
  position: absolute;
  z-index: 4;
  top: 95%;
  width: 0.25%;
  color: white;
  background: white;
}

.meterCurrentPositionTick
{
  height: 30px;
  position: absolute;
  z-index: 4;
  top: 95%;
  left: 47%;
  width: 0.25%;
  color: white;
  background: white;
}

.meterCurrentPositionLabel { 
  height: 30px;
  position: absolute;
  z-index: 3;
  top: 92.0%;
  left: 45%;
  width: 4%;
  font-size: 20px;
  font-weight:bold;
  background: #222;
  -webkit-border-radius: 25px;
  padding-top: 1px;
  padding-bottom: 5px;
  padding-right: 5px;
  /* webkit value */
  padding-left: 5px;
  /*padding-left: 10px;*/
  -webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
  color: white;
}

.meterTotalTime { 
  height: 30px;
  position: absolute;
  z-index: 3;
  top: 95.0%;
  left: 90%;
  /* webkit value */
  width: 4.2%;
  /*width: 4%;*/
  font-size: 20px;
  font-weight:bold;
  background: #222;
  -webkit-border-radius: 25px;
  padding-top: 1px;
  padding-bottom: 5px;
  padding-right: 5px;
  padding-left: 10px;
  -webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
  color: white;
}

.meter { 
  height: 30px;
  position: absolute;
  z-index: 3;
  top: 95%;
  width: 85%;
  left: 5%;
  /* webkit value */
  background: #222;
  /*background: #555;*/
  -webkit-border-radius: 25px;
  padding: 10px;
  -webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
}

.meter-span {
  display: block;
  height: 100%;
  -webkit-border-top-right-radius: 8px;
  -webkit-border-bottom-right-radius: 8px;
  -webkit-border-top-left-radius: 20px;
  -webkit-border-bottom-left-radius: 20px;
  /* webkit value */
  background-color: rgb(43,214,83);
  /*background-color: rgb(43,194,83);*/
  background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    /* webkit values */
    color-stop(0, rgb(43,214,83)),
    color-stop(1, rgb(84,255,84))
    /*color-stop(0, rgb(43,194,83)),
    color-stop(1, rgb(84,240,84))*/
   );
  background-image: -webkit-linear-gradient(
    center bottom,
    /* webkit value */
    rgb(43,214,83) 37%,
    /*rgb(43,194,83) 37%,*/
    rgb(84,240,84) 69%
   );
  -webkit-box-shadow: 
    inset 0 2px 9px  rgba(255,255,255,0.3),
    inset 0 -2px 6px rgba(0,0,0,0.4);
  position: relative;
  overflow: hidden;
}

#clock { 
  height: 30px;
  position: absolute;
  z-index: 3;
  top: 90.0%;
  left: 90%;
  width: 7%;
  font-size: 20px;
  font-weight:bold;
  background: #222;
  -webkit-border-radius: 25px;
  padding-top: 1px;
  padding-bottom: 5px;
  padding-right: 5px;
  padding-left: 10px;
  -webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
  color: white;
}

